# cargo-templates

./: Makefile  README.md
.github/workflows/: build.yml
aoc/: Cargo.toml  cargo-generate.toml  init-script.rhai
aoc/src/: lib.rs  main.rs
lib/: Cargo.toml  README.md  cargo-generate.toml
lib/.cargo-husky/hooks/: pre-commit
lib/.github/workflows/: general.yml
lib/src/: lib.rs
