[package]
authors = ["{{authors}}"]
name = "{{project-name}}"
description = "{{description}}"
documentation = "https://docs.rs/{{project-name}}/latest/{{project-name}}/"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/{{username}}/{{project-name}}"
rust-version = "1.72.0"

[dependencies]


{% if hooks %}
tracing = "0.1.40"
[dev-dependencies.cargo-husky]

{% endif %}
version = "1.5.0"
default-features = false
features = ["user-hooks"]
